--- a/src/Extensions/Cassandra.AppMetrics/Cassandra.AppMetrics.csproj
+++ b/src/Extensions/Cassandra.AppMetrics/Cassandra.AppMetrics.csproj
@@ -35,8 +35,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="App.Metrics.Abstractions" Version="4.3.0" />
-    <PackageReference Include="App.Metrics.Concurrency" Version="4.3.0" />
+    <PackageReference Include="App.Metrics.Abstractions" Version="4.4.0-preview.0.4" />
+    <PackageReference Include="App.Metrics.Concurrency" Version="4.4.0-preview.0.4" />
   </ItemGroup>
 
   <ItemGroup>
